--- a/site/writing.html
+++ b/site/writing.html
@@ -12,21 +12,20 @@
     }
 
     img {
-        width: 500px;
-        height: 500px;
+        width: 40%;
         object-fit: cover;
         border-radius: 8px;
     }
 </style>
 
 <body>
-    <h1 class="heading">The Universe</h1>
-    <p class="subtitle">And the universe said I love you</p>
+    <h1 class="heading">Writings</h1>
+    <p class="subtitle">Our silly little handwritings</p>
     <p class="date">February 28th, 2024</p>
     <div>
         <img src="../images/writing.png" alt="The Universe" class="center">
     </div>
-    <p class="subtitle">The Moon is Ours</p>
+    <p class="subtitle">Your name is engraved in my heart</p>
 </body>
 
 </html>
