--- a/site/nebula.html
+++ b/site/nebula.html
@@ -13,8 +13,7 @@
     }
 
     img {
-        width: 500px;
-        height: 500px;
+        width: 35%;
         object-fit: cover;
         border-radius: 8px;
     }
