--- a/site/saturn.html
+++ b/site/saturn.html
@@ -12,8 +12,7 @@
     }
 
     img {
-        width: 500px;
-        height: 500px;
+        width: 45%;
         object-fit: cover;
         border-radius: 8px;
     }
