--- a/index.html
+++ b/index.html
@@ -3,48 +3,72 @@
 <html>
 
 <head>
+    <title>I love you</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>I love you</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela Round">
 </head>
 <script src="script.js" defer></script>
 
 <body class="background-gradient">
-    <h1 style="padding-top: 5%;">Love Gallery</h1>
-    <p style="padding-top: 2%">A collection of memories between two lovers</p>
+    <section>
+        <h1 style="padding-top: 5%;">Love Gallery</h1>
+        <p style="padding-top: 3%;">A collection of memories between two lovers</p>
+    </section>
 
-    <div class="container">
-        <i id="left" class="fa-solid fa-angle-left"></i>
-        <ul class="subcontainer">
-            <li class="images">
-                <a href="site/moon.html">
-                    <img src="images/moon.png" alt="Moon">
-                </a>
-            </li>
-            <li class="images">
-                <a href="site/nebula.html">
-                    <img src="images/nebula.png" alt="Nebula">
-                </a>
-            </li>
-            <li class="images">
-                <a href="site/saturn.html">
-                    <img src="images/saturn.png" alt="Saturn">
-                </a>
-            </li>
-            <li class="images">
-                <a href="site/universe.html">
-                    <img src="images/universe.png" alt="Universe">
-                </a>
-            </li>
-            <li class="images">
-                <a href="site/writing.html">
-                    <img src="images/writing.png" alt="Writing">
-                </a>
-            </li>
-        </ul>
-        <i id="right" class="fa-solid fa-angle-right"></i>
-    </div>
+    <section>
+        <div class="container">
+            <i id="left" class="fa-solid fa-angle-left"></i>
+            <ul class="subcontainer">
+                <li class="images">
+                    <a href="site/moon.html">
+                        <img src="images/moon.png" alt="Moon">
+                    </a>
+                </li>
+                <li class="images">
+                    <a href="site/nebula.html">
+                        <img src="images/nebula.png" alt="Nebula">
+                    </a>
+                </li>
+                <li class="images">
+                    <a href="site/saturn.html">
+                        <img src="images/saturn.png" alt="Saturn">
+                    </a>
+                </li>
+                <li class="images">
+                    <a href="site/universe.html">
+                        <img src="images/universe.png" alt="Universe">
+                    </a>
+                </li>
+                <li class="images">
+                    <a href="site/writing.html">
+                        <img src="images/writing.png" alt="Writing">
+                    </a>
+                </li>
+            </ul>
+            <i id="right" class="fa-solid fa-angle-right"></i>
+        </div>
+    </section>
+
+    <section class="section">
+        <h1>The story of our life</h1>
+        <p>Our story began on April 21st, 2017</p>
+
+        <div class="timeline-text">
+            <div class="timeline-center">
+                <div class="timeline-circle">
+                </div>
+            </div>
+        </div>
+
+
+    </section>
+
+    <section>
+
+    </section>
+
 
 </body>
 
