timeline + polished viewport a bit
+ 1 image to carousel
+ timeline foundation
~ colour formatting (took ages)
~ adjusted width of elements
~ fixed viewport issues for different websites

// need to fix carousel transitions

--- a/index.html
+++ b/index.html
@@ -12,23 +12,28 @@
 <script src="script.js" defer></script>
 
 <body class="background-gradient">
-    <section>
+
+    <section class="main-height">
+
         <h1 style="padding-top: 5%;">Love Gallery</h1>
         <p style="padding-top: 3%;">A collection of memories between two lovers</p>
-    </section>
 
-    <section>
         <div class="container">
             <i id="left" class="fa-solid fa-angle-left"></i>
             <ul class="subcontainer">
                 <li class="images">
                     <a href="site/moon.html">
-                        <img src="images/moon.png" alt="Moon">
+                        <img id="hover-sound" src="images/moon.png" alt="Moon">
                     </a>
                 </li>
                 <li class="images">
                     <a href="site/nebula.html">
                         <img src="images/nebula.png" alt="Nebula">
+                    </a>
+                </li>
+                <li class="images">
+                    <a href="site/world.html">
+                        <img src="images/world.png" alt="Moon and Earth">
                     </a>
                 </li>
                 <li class="images">
@@ -51,22 +56,57 @@
         </div>
     </section>
 
-    <section class="section">
+    <section class="timeline-container">
+
         <h1>The story of our life</h1>
-        <p>Our story began on April 21st, 2017</p>
+        <p>Our 7 year long journey..</p>
 
-        <div class="timeline-text">
-            <div class="timeline-center">
-                <div class="timeline-circle">
-                </div>
+        <div class="timeline-subcontainer">
+            <div class="timeline-date">April 21st, 2017</div>
+            <div class="timeline-line">
+                <div class="timeline-circle"></div>
             </div>
+            <div class="timeline-text">paragraph</div>
         </div>
-
-
+        <div class="timeline-subcontainer">
+            <div class="timeline-date">May 14th, 2017</div>
+            <div class="timeline-line">
+                <div class="timeline-circle"></div>
+            </div>
+            <div class="timeline-text">paragraph</div>
+        </div>
+        <div class="timeline-subcontainer">
+            <div class="timeline-date">September 21st, 2017</div>
+            <div class="timeline-line">
+                <div class="timeline-circle"></div>
+            </div>
+            <div class="timeline-text">paragraph</div>
+        </div>
+        <div class="timeline-subcontainer">
+            <div class="timeline-date">December 10th, 2017</div>
+            <div class="timeline-line">
+                <div class="timeline-circle"></div>
+            </div>
+            <div class="timeline-text">paragraph</div>
+        </div>
+        <div class="timeline-subcontainer">
+            <div class="timeline-date">April 21st, 2018</div>
+            <div class="timeline-line">
+                <div class="timeline-circle"></div>
+            </div>
+            <div class="timeline-text">paragraph</div>
+        </div>
     </section>
 
-    <section>
 
+
+
+
+
+
+
+
+    <section>
     </section>
 
 
