--- a/site/nebula.html
+++ b/site/nebula.html
@@ -10,10 +10,12 @@
 <style>
     body {
         overflow: hidden;
+        height: 100vh;
     }
 
     img {
-        width: 35%;
+        width: auto;
+        height: auto;
         object-fit: cover;
         border-radius: 8px;
     }
