--- a/site/moon.html
+++ b/site/moon.html
@@ -9,11 +9,12 @@
 <style>
     body {
         overflow: hidden;
+        height: 100vh;
     }
 
     img {
-        width: 500px;
-        height: 500px;
+        width: auto;
+        height: auto;
         object-fit: cover;
         border-radius: 8px;
     }
