--- a/site/universe.html
+++ b/site/universe.html
@@ -12,8 +12,8 @@
     }
 
     img {
-        width: 500px;
-        height: 500px;
+        width: auto;
+        height: auto;
         object-fit: cover;
         border-radius: 8px;
     }
