--- a/index.html
+++ b/index.html
@@ -59,42 +59,81 @@
     <section class="timeline-container">
 
         <h1>The story of our life</h1>
-        <p>Our 7 year long journey..</p>
+        <p>Our 7 year long story..</p>
 
         <div class="timeline-subcontainer">
-            <div class="timeline-date">April 21st, 2017</div>
+            <div class="timeline-date">2017</div>
             <div class="timeline-line">
-                <div class="timeline-circle"></div>
+                    <div class="timeline-circle"></div>
             </div>
-            <div class="timeline-text">paragraph</div>
+            <div class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat.
+                <img src="images/minecraft.png">
+            </div>
         </div>
         <div class="timeline-subcontainer">
-            <div class="timeline-date">May 14th, 2017</div>
+            <div class="timeline-date">2018</div>
             <div class="timeline-line">
                 <div class="timeline-circle"></div>
             </div>
-            <div class="timeline-text">paragraph</div>
+            <div class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat.</div>
         </div>
         <div class="timeline-subcontainer">
-            <div class="timeline-date">September 21st, 2017</div>
+            <div class="timeline-date">2019</div>
             <div class="timeline-line">
                 <div class="timeline-circle"></div>
             </div>
-            <div class="timeline-text">paragraph</div>
+            <div class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat.</div>
         </div>
         <div class="timeline-subcontainer">
-            <div class="timeline-date">December 10th, 2017</div>
+            <div class="timeline-date">2020</div>
             <div class="timeline-line">
                 <div class="timeline-circle"></div>
             </div>
-            <div class="timeline-text">paragraph</div>
+            <div class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat.</div>
         </div>
         <div class="timeline-subcontainer">
-            <div class="timeline-date">April 21st, 2018</div>
+            <div class="timeline-date">2021</div>
             <div class="timeline-line">
                 <div class="timeline-circle"></div>
             </div>
-            <div class="timeline-text">paragraph</div>
+            <div class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat.</div>
+        </div>
+        <div class="timeline-subcontainer">
+            <div class="timeline-date">2022</div>
+            <div class="timeline-line">
+                <div class="timeline-circle"></div>
+            </div>
+            <div class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat.</div>
+        </div>
+        <div class="timeline-subcontainer">
+            <div class="timeline-date">2023</div>
+            <div class="timeline-line">
+                <div class="timeline-circle"></div>
+            </div>
+            <div class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat.</div>
+        </div>
+        <div class="timeline-subcontainer">
+            <div class="timeline-date">2024</div>
+            <div class="timeline-line">
+                <div class="timeline-circle"></div>
+            </div>
+            <div class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat.</div>
         </div>
     </section>
 
