--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul class="subcontainer">
                 <li class="images">
                     <a href="site/moon.html">
-                        <img id="hover-sound" src="images/moon.png" alt="Moon">
+                        <img src="images/moon.png" alt="Moon">
                     </a>
                 </li>
                 <li class="images">
@@ -64,7 +64,7 @@
         <div class="timeline-subcontainer">
             <div class="timeline-date">2017</div>
             <div class="timeline-line">
-                    <div class="timeline-circle"></div>
+                <div class="timeline-circle"></div>
             </div>
             <div class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -136,16 +136,23 @@
                 laboris nisi ut aliquip ex ea commodo consequat.</div>
         </div>
     </section>
-
-
-
-
-
-
-
-
-
-    <section>
+    <section class="exhibition-container">
+        <h1>Exhibition</h1>
+        <p>Go down memory lane</p>
+        <ul class="exhibition-subcontainer">
+            <li class="exhibition-images">
+                <img src="images/puzzle.png">
+            </li>
+            <li class="exhibition-images">
+                <img src="images/puzzle.png">
+            </li>
+            <li class="exhibition-images">
+                <img src="images/puzzle.png">
+            </li>
+            <li class="exhibition-images">
+                <img src="images/puzzle.png">
+            </li>
+        </ul>
     </section>
 
 
